Added changed-status/id  for quartermaster - on DistributionController
